--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -13,7 +13,7 @@ import pyIco from "../../public/icons/python.png?url";
 ---
 
 <header>
-    <div class="d-flex justify-content-center">
+    <div class="d-flex justify-content-center mt-3 h-100">
         <div class="d-flex flex-column justify-content-center">
             <div
                 class="d-flex align-items-center flex-column"
@@ -27,7 +27,10 @@ import pyIco from "../../public/icons/python.png?url";
                 </h1>
                 <h4 style="color:#adaaaa">Made by Antonio Martínez</h4>
             </div>
-            <div class="d-flex align-items-center justify-content-center">
+            <div
+                class="d-flex align-items-center justify-content-center btn-container"
+                style="gap:10px"
+            >
                 <a href="#goals">
                     <button class="my-btn"
                         ><p style="margin: 0 !important;">
@@ -35,26 +38,38 @@ import pyIco from "../../public/icons/python.png?url";
                         </p></button
                     >
                 </a>
+                <a href="https://github.com/AntonioMrtz/SpotifyElectron">
+                    <button class="my-btn btn-secondary"
+                        ><p style="margin: 0 !important;">Repository</p></button
+                    >
+                </a>
             </div>
         </div>
-        <div class="d-flex justify-content-center align-items-center">
+        <div
+            class="d-flex justify-content-center align-items-center header-img-container"
+        >
             <img class="img-fluid" src={addSongLaptop} alt="" />
         </div>
     </div>
 
     <div
-        class="d-flex flex-column justify-content-center align-items-center"
-        style="height: 100%"
+        class="d-flex flex-column justify-content-center align-items-center tech-wrapper"
     >
         <div
-            class="d-flex justify-content-center tech-wrapper"
-            style="border-bottom: 1px solid var(--app-logo-color);padding: 1%;"
+            class="d-flex flex-wrap justify-content-center"
+            style="padding: 1% 0 1% 1%;"
         >
             <img class="tech-ico" src={reactIco} alt="react icon" />
             <img class="tech-ico" src={tsIco} alt="typescript icon" />
             <img class="tech-ico" src={electronIco} alt=" icon" />
             <img class="tech-ico" src={mongoIco} alt=" icon" />
             <img class="tech-ico" src={cssIco} alt=" icon" />
+        </div>
+
+        <div
+            class="d-flex flex-wrap justify-content-center"
+            style="padding: 1% 1% 1% 0;"
+        >
             <img class="tech-ico" src={pyIco} alt=" icon" />
             <img class="tech-ico" src={fastApiIco} alt=" iconicon" />
             <img class="tech-ico" src={boostrapIco} alt=" icon" />
@@ -102,6 +117,11 @@ import pyIco from "../../public/icons/python.png?url";
         filter: brightness(0.75);
     }
 
+    .btn-secondary {
+        background-color: var(--background-secondary);
+        border: 1px solid var(--app-logo-color-darker);
+    }
+
     .tech-ico {
         width: 32px !important;
         margin: 0 10px 0 10px !important;
@@ -110,5 +130,30 @@ import pyIco from "../../public/icons/python.png?url";
     .tech-ico:hover {
         transition: transform 0.1s; /* Add a transition on the transform property */
         transform: scale(1.2);
+    }
+
+    .tech-wrapper {
+        height: 100%;
+        flex-direction: row !important;
+        margin: 5%;
+    }
+
+    @media (max-width: 989px) {
+        h1 {
+            font-size: 2.8rem !important;
+        }
+
+        .header-img-container {
+            display: none !important;
+        }
+        .tech-wrapper {
+            flex-direction: column !important;
+        }
+    }
+
+    @media (max-width: 400px) {
+        .btn-container {
+            flex-direction: column !important;
+        }
     }
 </style>
