--- a/src/components/Navbar.astro
+++ b/src/components/Navbar.astro
@@ -27,7 +27,7 @@ import antonioMrtzIcon from "../../public/icons/AntonioMrtzIco.jpg?url";
             aria-expanded="false"
             aria-label="Toggle navigation"
         >
-            <span class="navbar-toggler-icon"></span>
+            <span class="navbar-toggler-icon"> </span>
         </button>
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav me-auto mb-2 mb-lg-0">
@@ -55,6 +55,7 @@ import antonioMrtzIcon from "../../public/icons/AntonioMrtzIco.jpg?url";
                 </li>
             </ul>
             <div
+                class="navbar-right"
                 style="margin-right: 1.5rem; display: flex; justify-content: center; align-items: center;"
             >
                 <a
@@ -78,6 +79,36 @@ import antonioMrtzIcon from "../../public/icons/AntonioMrtzIco.jpg?url";
                         alt="Github Icon"
                         style="border-radius: 999px; width: 38px; height: 38px;"
                     />
+                </a>
+            </div>
+
+            <div
+                class="navbar-right-phone flex-column"
+                style="display: flex; justify-content: center; align-items: center;"
+            >
+                <a
+                    class="navbar-item-right-phone"
+                    href="https://github.com/AntonioMrtz/SpotifyElectron"
+                >
+                    <img
+                        class="img-fluid"
+                        src={githubIcon}
+                        alt="Antonio Martinez Photo Icon"
+                        style="border-radius: 999px; width: 42px; height: 42px;"
+                    />
+                    <span>Repository</span>
+                </a>
+                <a
+                    class="navbar-item-right-phone"
+                    href="https://github.com/AntonioMrtz/"
+                >
+                    <img
+                        class="img-fluid"
+                        src={antonioMrtzIcon}
+                        alt="Github Icon"
+                        style="border-radius: 999px; width: 38px; height: 38px;"
+                    />
+                    <span>AntonioMrtz</span>
                 </a>
             </div>
         </div>
@@ -122,7 +153,7 @@ import antonioMrtzIcon from "../../public/icons/AntonioMrtzIco.jpg?url";
         padding-top: 0 !important;
         padding-bottom: 0 !important;
         padding-right: 1rem !important;
-        padding-left: 1 rem !important;
+        padding-left: 1rem !important;
     }
 
     .nav-link:hover {
@@ -136,5 +167,77 @@ import antonioMrtzIcon from "../../public/icons/AntonioMrtzIco.jpg?url";
 
     .navbar-item-right:hover {
         filter: brightness(0.75);
+    }
+
+    .navbar-toggler-icon {
+        background-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 30 30'%3e%3cpath stroke='rgba%28255, 255, 255, 0.55%29' stroke-linecap='round' stroke-miterlimit='10' stroke-width='2' d='M4 7h22M4 15h22M4 23h22'/%3e%3c/svg%3e") !important;
+    }
+
+    .navbar-toggler:focus {
+        box-shadow: 0 0 0 0.15rem var(--app-logo-color-darker);
+    }
+
+    /* Phone Only */
+
+    .navbar-right-phone{
+
+        margin-top: 1rem;
+
+    }
+
+    .navbar-item-right-phone {
+        display: none;
+        border: 1px solid var(--spacer);
+        border-radius: 8px;
+        padding: 1%;
+        align-items: center;
+        justify-content: center;
+        gap: 10px;
+        margin-bottom: 0.5rem;
+        color: white !important;
+        background-color: var(--dark-filler);
+        min-width: 200px !important;
+    }
+
+    .navbar-item-right-phone span{
+
+        flex-grow: 1;
+        font-weight: 500;
+        display: flex;
+        justify-content: center;
+    }
+
+    .navbar-item-right-phone:first-child img{
+        width: 38px !important;
+        height: 38px !important;
+    }
+
+    @media (max-width: 989px) {
+        .nav-item {
+            width: 100% !important;
+            margin-bottom: 0.5rem;
+        }
+
+        .nav-item a {
+            font-size: 1.5rem !important;
+            padding: 0.5rem !important;
+        }
+
+        .brand-li {
+            margin: 0 0 1rem 0 !important;
+        }
+
+        .brand-li a {
+            font-size: 2rem !important;
+            margin: 0 !important;
+        }
+
+        .navbar-right {
+            display: none !important;
+        }
+
+        .navbar-item-right-phone {
+            display: flex;
+        }
     }
 </style>
